fixed z-index stuff and view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,7 +39,7 @@ label.error {
 }
 
 .icon-z {
-    z-index: 100;
+    z-index: 1001;
     position: absolute;
 }
 
